# Haskell99Pointfree

./: .Haskell99Pointfree.cabal.swp  Haskell99Pointfree.cabal  LICENSE  README.md  stack.yaml
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  Haskell99Pointfree-0.1.0.0-CH0qb3zjB5EJLvf8j5jKUL  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.3-GMvKf4YYlquDqqi6Pf0wNb  hspec-core-2.4.3-3dXPWtMZSqIKb3t3JsGIUg  hspec-discover-2.4.3-CG2f3yt4qi61oj48M1aJup  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  quickcheck-io-0.1.4-C5t3MfRsr5zrFam5nRAFy  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7  utility-ht-0.0.13-HmMdLiB8sea9VwMp6zcUD0
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/lib/x86_64-linux-ghc-8.0.2/Haskell99Pointfree-0.1.0.0-CH0qb3zjB5EJLvf8j5jKUL/: Haskell99Pointfree.hi  P1.dyn_hi  P1.hi
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/lib/x86_64-linux-ghc-8.0.2/Haskell99Pointfree-0.1.0.0-CH0qb3zjB5EJLvf8j5jKUL/Haskell99Pointfree/: P1.dyn_hi  P1.hi
.stack-work/install/x86_64-linux/lts-8.6/8.0.2/pkgdb/: Haskell99Pointfree-0.1.0.0-CH0qb3zjB5EJLvf8j5jKUL.conf  package.cache
src/: Haskell99Pointfree.hs
src/Haskell99Pointfree/: P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs  P07.hs  P08.hs  P09.hs  P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P2.hs  P20.hs  P21.hs  P22.hs  P23.hs  P24.hs  P25.hs  P26.hs  P27.hs  P28.hs  P3.hs  P31.hs  P32.hs  P33.hs  P34.hs  P35.hs  P4.hs  P46.hs  P47.hs  P5.hs  (+18 more)
src/P1/: P1.hs
test/: Main.hs
test/Tests/: P1Tests.hs  P2Tests.hs  P4Tests.hs  P5Tests.hs
