name:                Haskell99Pointfree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SvenWille/Haskell99Pointfree#readme
license:             BSD3
license-file:        LICENSE
author:              SvenWille
maintainer:          example@example.com
copyright:           2017 SvenWille
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Haskell99Pointfree ,
                       Haskell99Pointfree.P1,
                       Haskell99Pointfree.P2,
                       Haskell99Pointfree.P4,
                       Haskell99Pointfree.P5,
                       Haskell99Pointfree.P11
  build-depends:       base >= 4.7 && < 5,
                       utility-ht,
                       extra
  default-language:    Haskell2010


test-suite Haskell99Pointfree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base               >=4.7 && < 5 ,
                       Haskell99Pointfree              ,
                       QuickCheck                      ,
                       hspec
  other-modules:       Tests.P1Tests                   ,
                       Tests.P2Tests                   ,
                       Tests.P4Tests                   ,
                       Tests.P5Tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
