name:                Haskell99Pointfree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SvenWille/Haskell99Pointfree#readme
license:             BSD3
license-file:        LICENSE
author:              SvenWille
maintainer:          example@example.com
copyright:           2017 SvenWille
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Haskell99Pointfree ,
                       Haskell99Pointfree.P01,
                       Haskell99Pointfree.P02,
                       Haskell99Pointfree.P03,
                       Haskell99Pointfree.P04,
                       Haskell99Pointfree.P05,
                       Haskell99Pointfree.P06,
                       Haskell99Pointfree.P07,
                       Haskell99Pointfree.P08,
                       Haskell99Pointfree.P09,
                       Haskell99Pointfree.P10,
                       Haskell99Pointfree.P11,
                       Haskell99Pointfree.P12,
                       Haskell99Pointfree.P13,
                       Haskell99Pointfree.P14,
                       Haskell99Pointfree.P15,
                       Haskell99Pointfree.P16,
                       Haskell99Pointfree.P17,
                       Haskell99Pointfree.P18,
                       Haskell99Pointfree.P19,
                       Haskell99Pointfree.P20,
                       Haskell99Pointfree.P21,
                       Haskell99Pointfree.P22,
                       Haskell99Pointfree.P23,
                       Haskell99Pointfree.P24,
                       Haskell99Pointfree.P31,
                       Haskell99Pointfree.P32,
                       Haskell99Pointfree.P46,
                       Haskell99Pointfree.P54,
                       Haskell99Pointfree.P61,
                       Haskell99Pointfree.P95
  build-depends:       base >= 4.7 && < 5,
                       utility-ht,
                       extra,
                       lens,
                       syb,
                       derive >= 2.6.2,
                       random

  default-language:    Haskell2010


test-suite Haskell99Pointfree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base               >=4.7 && < 5 ,
                       Haskell99Pointfree              ,
                       QuickCheck                      ,
                       hspec
  other-modules:       Tests.P1Tests                   ,
                       Tests.P2Tests                   ,
                       Tests.P4Tests                   ,
                       Tests.P5Tests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
